[package]
name = "mizore"
version = "0.1.0"
edition = "2024"
description = "A static analyzer that verifies Python asserts before execution"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mushitoriami/mizore"

[dependencies]
cosp = "=0.2.3"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.14.1" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.14.1" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.14.1" }
